# Code

./: .gitignore  addcase.sh  call.js  checkcases.sh  compile.sh  getdata.sh  launchtest.json  main.html  runcases.sh  setup.sh  style.css
Code/CEOI '17 P1 - One-Way Streets/: main.cpp
Code/COCI '15 Contest 2 #4 Savez/: CMakeLists.txt
Code/Code Jam 3/: main.cpp
Code/Edu 68/: main.cpp
Code/Grouping/: main.cpp
Code/Leapfrog Ch. 2/: CMakeLists.txt  input.txt
Code/The Great Fire of Köres/: CMakeLists.txt
Code/codeforces1/: CMakeLists.txt
Code/test1/: main.cpp
Codeforces/G. Mercenaries/: CMakeLists.txt
Problems/: test
Problems/#582Div3/: CMakeLists.txt  main.cpp
Problems/#617Div3/: CMakeLists.txt
Problems/570 Div 3 E/: main.cpp
Problems/APIO '14 P2 - Split the Sequence /: CMakeLists.txt
Problems/APIO '19 P1 - Strange Device /: main.cpp
Problems/Allen's Segments /: main.cpp
Problems/Aquarium 3/: CMakeLists.txt  main.cpp
Problems/BOI 2001 P1 - Escape/: main.cpp
Problems/BOI/Baltic OI '05 P1 - Camouflaged camp/: CMakeLists.txt  main.cpp
Problems/CCC2022/: CMakeLists.txt  brute  brute.cpp  gen  gen.cpp  in  main  main.cpp  p1.txt  p2.txt  p3.txt  p4.txt  slowfast.sh
Problems/CCO '07 P6 - Road Construction/: CMakeLists.txt  main.cpp
Problems/CCO '96 P5 - All Roads Lead Where/: main.cpp
Problems/CCO22Day1/: gen  (+8 more)
Problems/CFRound/ColourTheFlag/: CMakeLists.txt  check.cpp  dormi_wa10.cpp  dormi_wa11.cpp  dormi_wa12.cpp  dormi_wa13.cpp  dormi_wa14.cpp  dormi_wa15.cpp  dormi_wa16.cpp  dormi_wa17.cpp  dormi_wa18.cpp  dormi_wa19.cpp  dormi_wa2.cpp  dormi_wa3.cpp  dormi_wa6.cpp  dormi_wa7.cpp  dormi_wa8.cpp  dormi_wa9.cpp  dormijava.java  dormipython.py  gen.cpp  main.cpp
Problems/Other/TestPBDS/: CMakeLists.txt  main.cpp
(+3707 files in other folders)
