cmake_minimum_required(VERSION 3.17)
project(ColourTheFlag)

set(CMAKE_CXX_STANDARD 14)

add_executable(ColourTheFlag main.cpp dormi_wa1.cpp dormi_wa2.cpp dormi_wa3.cpp dormi_wa4.cpp dormi_wa5.cpp dormi_wa6.cpp dormi_wa7.cpp dormi_wa8.cpp dormi_wa9.cpp dormi_wa10.cpp dormi_wa11.cpp dormi_wa12.cpp dormi_wa13.cpp dormi_wa14.cpp dormi_wa15.cpp dormi_wa16.cpp dormi_wa17.cpp dormi_wa18.cpp dormi_wa19.cpp)